[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Font/deutsch_gothic/Deutsch.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/ThemeUI/theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Font/coolvetica/coolvetica rg.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.129412, 0.329412, 0.560784, 1, 0.568627, 0.596078, 0.678431, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 250
outline_size = 20
outline_color = Color( 0.235294, 0.172549, 0.0862745, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 72
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -384.0
margin_bottom = 256.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButoon" type="Button" parent="MarginContainer"]
visible = false
margin_top = 128.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 128 )
custom_fonts/font = SubResource( 3 )
text = "Reset Progress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -291.0
margin_right = 291.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_top = 179.0
margin_right = 582.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.705882, 0.607843, 0.0588235, 1 )
text = "Femur"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 452.0
margin_right = 582.0
margin_bottom = 900.0
custom_constants/margin_top = 128

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_top = 128.0
margin_right = 582.0
margin_bottom = 448.0
custom_constants/separation = 64

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 582.0
margin_bottom = 128.0
rect_min_size = Vector2( 576, 128 )
custom_fonts/font = SubResource( 5 )
text = "New Game"

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 582.0
margin_bottom = 320.0
rect_min_size = Vector2( 576, 128 )
custom_fonts/font = SubResource( 5 )
text = "Quit"

[connection signal="pressed" from="MarginContainer/ResetButoon" to="." method="_on_ResetButoon_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
